# ising_montecarlo

./: CMakeLists.txt  ising_plots.ipynb  main.cpp
